samples/_failures_safe/1761374711_dc7086_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f50ab973.c: In function ‘main’:
./samples/SAFE/__tmp_f50ab973.c:143:9: error: expected expression at end of input
  143 |         double ratio = (1.0 - (double)compressed.size / (double)
      |         ^~~~~~
./samples/SAFE/__tmp_f50ab973.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f50ab973.c:143:9: error: expected declaration or statement at end of input
